--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="./index.css" />
 
     <title>Frontend Mentor | NFT preview card component</title>
@@ -25,7 +19,26 @@
   </head>
   <body>
     <main class="card-container">
-      <section class="card"></section>
+      <section class="card">
+        <img src="./images/image-equilibrium.jpg" height="200px" />
+        <h1>Equilibrium #3429</h1>
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+        <img src="./images/icon-ethereum.svg" />
+        <p>0.041ETH</p>
+        <img src="./images/icon-clock.svg" />
+        <p>3 days left</p>
+        <hr />
+        <img src="./images/image-avatar.png" />
+        <p>creation of <strong>Jules Wyvern</strong></p>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Abhay kumar</a>.
+      </div>
+    </footer>
   </body>
 </html>
