--- a/index.html
+++ b/index.html
@@ -20,16 +20,48 @@
   <body>
     <main class="card-container">
       <section class="card">
-        <img src="./images/image-equilibrium.jpg" height="200px" />
+        <div class="card-image">
+          <img
+            src="./images/image-equilibrium.jpg"
+            alt="image-equilibrium"
+            height="320px"
+          />
+        </div>
+
         <h1>Equilibrium #3429</h1>
-        <p>Our Equilibrium collection promotes balance and calm.</p>
-        <img src="./images/icon-ethereum.svg" />
-        <p>0.041ETH</p>
-        <img src="./images/icon-clock.svg" />
-        <p>3 days left</p>
+        <p class="para-text">
+          Our Equilibrium collection promotes balance and calm.
+        </p>
+
+        <div class="icon-text">
+          <div class="ethereum">
+            <div class="icon-ethereum">
+              <img src="./images/icon-ethereum.svg" alt="icon-ethereum" />
+            </div>
+            <span>0.041ETH</span>
+          </div>
+
+          <div class="clock">
+            <div class="icon-clock">
+              <img src="./images/icon-clock.svg" />
+            </div>
+            <span>3 days left</span>
+          </div>
+        </div>
+
         <hr />
-        <img src="./images/image-avatar.png" />
-        <p>creation of <strong>Jules Wyvern</strong></p>
+        <div class="card-footer">
+          <div>
+            <img
+              class="card-footer-image"
+              src="./images/image-avatar.png"
+              height="45px"
+            />
+          </div>
+          <p class="card-footer-text">
+            Creation of <strong>Jules Wyvern</strong>
+          </p>
+        </div>
       </section>
     </main>
     <footer class="footer">
