--- a/index.html
+++ b/index.html
@@ -64,12 +64,16 @@
         </div>
       </section>
     </main>
+
     <footer class="footer">
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Abhay kumar</a>.
+        >. Coded by
+        <a href="https://abhay0480-eng.github.io/nft-preview-card-component/"
+          >Abhay kumar</a
+        >.
       </div>
     </footer>
   </body>
